# recall-ai-agent-gcp

./: .dockerignore  .gitignore  Dockerfile  FULL_DOCUMENTATION.md  Jenkinsfile  api.py  application.py  index.html  main.py  pyproject.toml  readme.md  user_profile.json
manifests/: deployment.yaml  service.yaml
src/agent/: companion.py  tools.py
src/config/: settings.py
src/generator/: question_generator.py
src/llm/: groq_client.py
src/models/: question_schemas.py  schemas.py
src/prompts/: templates.py
