[project]
name = "recall-ai-agent-gcp"
version = "0.1.0"
description = "A high-performance AI study agent with teach-then-test workflow, powered by FastAPI and LangChain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.9",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.8",
    "python-dotenv>=1.2.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
